# RNTB3DE

./: .gitignore  Cargo.toml
crates/internals/: Cargo.toml
crates/internals/src/imports/: model.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: datatypes.rs  forward_pipeline.rs  framebuffer.rs  lerp.rs  lib.rs  mesh.rs  rasterizer.rs  renderer.rs
src/: main.rs
