[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
bumpalo = { version = "3.20.2", features = ["collections"] }
glam = { version = "0.33.0", features = ["fast-math", "approx"] }
itertools = "0.14.0"
rayon = "1.12.0"
wide = "1.4.0"
smallvec = "1.15.1"
parking_lot = "0.12.5"